# contextify

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  contextify.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: RELEASE_INSTALL.txt  RELEASE_INSTALL_WINDOWS.txt  build_linux.sh  build_windows.ps1  generate_icons.py  install-linux.sh  package_release.sh  package_release_windows.ps1  smoke_standalone.sh
src/contextify/: __init__.py  __main__.py  cli.py  contextify.ignore  exporter.py
tests/: test_export.py
tests/fixtures/sample_repo/: .contextifyignore  README.md
