[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextify"
version = "0.1.0"
description = "Export any repository into a compressed LLM-ready context bundle"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Contextify Contributors" }]
keywords = ["llm", "context", "repository", "export", "rag", "documentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing",
]
dependencies = []

[project.optional-dependencies]
rich = ["rich>=13.0.0"]
tokens = ["tiktoken>=0.7.0"]
all = ["rich>=13.0.0", "tiktoken>=0.7.0"]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "pyinstaller>=6.3.0",
]
build = ["pyinstaller>=6.3.0", "rich>=13.0.0"]

[project.scripts]
contextify = "contextify.cli:entry"

[project.urls]
Homepage = "https://github.com/alhussein-jamil/contextify"
Repository = "https://github.com/alhussein-jamil/contextify"
Issues = "https://github.com/alhussein-jamil/contextify/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/contextify"]

[tool.hatch.build.targets.wheel.force-include]
"src/contextify/contextify.ignore" = "contextify/contextify.ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
